# Apple-Toolsets

./: -  .gitignore  CONTINUATION_MEMO_2026-07-13.md  ENGINEERING_LOG.md  EVIDENCE_MANIFEST.json  HANDOFF.md  PROJECT_STATE.json  README.md  REMOTE_MACS.md  SESSION_HANDOFF_COMPLETE.md  USED_SCRIPTS.md  VERIFICATION.md  brandassets-xcode26-targettv-matrix.json  facet_hash_lookup_table.json  fetch_remote_file.py  fix_cli_optimize.py  fix_imports.py  fix_json_path.py  fix_nextgen.py  fix_pyproject.py  fix_wiki_status.py  generate_module_docs.py  generate_wiki_and_handoff.py  iconstack-semantics-summary.json  multi-entry-info.json  organize_docs.py  organize_research_reports.py  palette-probe-legacy-matrix.json  palette-string-audit-legacy.json  pyproject.toml  remote_exec.py  run_clean.py  runtime-fixed.json  test_benchmark.py  test_build.py  test_mac_training_and_astc_2.py  update_wiki_home.py  update_wiki_home2.py  update_wiki_home3.py  upterm_ios_build_11.py  (+25 more)
actool_linux/: __init__.py  __main__.py  compiler.py
actool_rs/: Cargo.toml
fixtures/: README.md  SELF-GENERATED.md  selfgen-rich-Assets.car
ibtool-py/: PROGRESS.md  README.md
research/: brandassets-probe-26_5-summary.json  compositor-oracle.json  runtime-consumer-matrix-verified.json  runtime-tv262.json
scripts/: deepwiki_generator.py  evaluate_car_types.py  evaluate_car_types2.py  train_micro_ai.py
tests/: test_ai_quantizer.py  test_appicons.py  test_atlas.py  test_bom.py  test_bomwriter.py  test_car.py  test_car_appearance_registry.py  test_carinfo.py  test_carwriter.py  test_catalog.py  test_cbck.py  (+37 more)
(+401 files in other folders)
