[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actool-linux"
version = "0.1.0"
description = "Clean-room, cross-platform implementation of the observable actool command-line contract"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "actool-linux contributors"}]

[project.optional-dependencies]
lzfse = ["lzfse>=0.4"]
svg = ["cairosvg>=2.7"]
all = ["lzfse>=0.4", "cairosvg>=2.7"]

[project.scripts]
actool-linux = "actool_linux.cli:main"
actool = "actool_linux.cli:main"
actool-car-info = "actool_linux.carinfo:main"
actool-car-repack = "actool_linux.repack:main"
actool-pdf-car = "actool_linux.pdfcar:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
